--- a/Grammar.Test/Grammar.Test.csproj
+++ b/Grammar.Test/Grammar.Test.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="EncoderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScorerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
