--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Encoder.cs" />
     <Compile Include="IGrammar.cs" />
     <Compile Include="IThesaurus.cs" />
     <Compile Include="ITokenizer.cs" />
