--- a/Vocabulary/Vocabulary.csproj
+++ b/Vocabulary/Vocabulary.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ILexicon.cs" />
     <Compile Include="Lexicon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Specification.cs" />
     <Compile Include="Thesaurus.cs" />
     <Compile Include="VariationExpander.cs" />
     <Compile Include="WordMap.cs" />
