Added rule for handling genitive case more generically TODO: Test drive rule to work for all cases and without hard coded modifications

--- a/Vocabulary/Vocabulary.csproj
+++ b/Vocabulary/Vocabulary.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ILexicon.cs" />
     <Compile Include="Lexicon.cs" />
+    <Compile Include="ModificationRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Specification.cs" />
     <Compile Include="Thesaurus.cs" />
