Preparation for handling present participle (-ing form)

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Tokens\Element.cs" />
     <Compile Include="TreeNode.cs" />
     <Compile Include="WordClasses\Pronoun.cs" />
+    <Compile Include="WordClasses\Auxiliary.cs" />
     <Compile Include="WordClasses\Verb.cs" />
     <Compile Include="WordClasses\Article.cs" />
     <Compile Include="WordClasses\Adjective.cs" />
