--- a/Tokenization.Test/packages.config
+++ b/Tokenization.Test/packages.config
@@ -12,4 +12,5 @@
   <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net461" />
   <package id="NUnit.Runners" version="3.7.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
