--- a/Grammar/Grammar.csproj
+++ b/Grammar/Grammar.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reason.cs" />
     <Compile Include="Scorer.cs" />
+    <Compile Include="Scoring.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
