--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Tokens\Element.cs" />
     <Compile Include="TreeNode.cs" />
     <Compile Include="WordClasses\InfinitiveMarker.cs" />
+    <Compile Include="WordClasses\Conjunction.cs" />
     <Compile Include="WordClasses\Preposition.cs" />
     <Compile Include="WordClasses\Pronoun.cs" />
     <Compile Include="WordClasses\Auxiliary.cs" />
