--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IReason.cs" />
     <Compile Include="IThesaurus.cs" />
     <Compile Include="ITokenizer.cs" />
+    <Compile Include="LoaderBase.cs" />
     <Compile Include="Tokens\Start.cs" />
     <Compile Include="Tokens\Ellipsis.cs" />
     <Compile Include="Tokens\Generic.cs" />
