--- a/Grammar/Grammar.csproj
+++ b/Grammar/Grammar.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arranger.cs" />
+    <Compile Include="Loader.cs" />
     <Compile Include="Process.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Evaluation.cs" />
