--- a/Grammar.Test/Grammar.Test.csproj
+++ b/Grammar.Test/Grammar.Test.csproj
@@ -56,7 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScorerTests.cs" />
+    <Compile Include="EvaluatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
