--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Tokens\Number.cs" />
     <Compile Include="Tokens\Abbreviation.cs" />
     <Compile Include="Tokens\Element.cs" />
+    <Compile Include="LazyTreeNode.cs" />
     <Compile Include="TreeNode.cs" />
     <Compile Include="WordClasses\InfinitiveMarker.cs" />
     <Compile Include="WordClasses\Conjunction.cs" />
