--- a/Grammar/Grammar.csproj
+++ b/Grammar/Grammar.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reason.cs" />
     <Compile Include="Evaluator.cs" />
-    <Compile Include="Scorer.cs" />
+    <Compile Include="ScoreTreeNode.cs" />
     <Compile Include="Scoring.cs" />
   </ItemGroup>
   <ItemGroup>
