--- a/TestBench/Testing.csproj
+++ b/TestBench/Testing.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleReporter.cs" />
+    <Compile Include="IReporter.cs" />
+    <Compile Include="TrainableEvaluator.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trainer.cs" />
     <Compile Include="TestBench.cs" />
     <Compile Include="TestCaseResult.cs" />
     <Compile Include="TestSuiteResult.cs" />
