Work in progress: v1 of trainer algoritm TODO: Implement create enumerator and update evaluator TODO: Load and save generated test cases TODO: Train on increasingly more test cases until all are covered TODO: More elaborate selection and sorting of update-actions TODO: Do/Undo of update-actions TODO: Optimize trainer

--- a/TestBench/Testing.csproj
+++ b/TestBench/Testing.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ConsoleReporter.cs" />
     <Compile Include="IReporter.cs" />
+    <Compile Include="TestRunner.cs" />
     <Compile Include="TrainableEvaluator.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
