Trainer succeed with first 31 cases with single code updates TODO: derive patterns with more than double codes TODO: derive repositioning patterns TODO: Store children as dictionary for faster lookup TODO: More elaborate selection and sorting of update-actions TODO: Train on increasingly more test cases until all are covered TODO: Load and save generated test cases

--- a/Core.Test/Core.Test.csproj
+++ b/Core.Test/Core.Test.csproj
@@ -70,9 +70,9 @@
       <Project>{13fc0b05-5926-4626-89c0-296ccf7444a7}</Project>
       <Name>Grammar</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TestBench\Testing.csproj">
+    <ProjectReference Include="..\Learning\Learning.csproj">
       <Project>{6f12fc3a-0e11-4e2b-be31-3114f671d869}</Project>
-      <Name>Testing</Name>
+      <Name>Learning</Name>
     </ProjectReference>
     <ProjectReference Include="..\Tokenization\Tokenization.csproj">
       <Project>{BF62CD42-7CDC-4616-9B25-49E985FFF1F7}</Project>
