--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -46,6 +46,7 @@
     <Compile Include="CodeEqualityComparer.cs" />
     <Compile Include="ConsoleReporter.cs" />
     <Compile Include="IReporter.cs" />
+    <Compile Include="PatternExtractor.cs" />
     <Compile Include="TestCase.cs" />
     <Compile Include="CandidateFilter.cs" />
     <Compile Include="TestRunner.cs" />
