--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Tokens\Number.cs" />
     <Compile Include="Tokens\Abbreviation.cs" />
     <Compile Include="Tokens\Element.cs" />
-    <Compile Include="LazyTreeNode.cs" />
+    <Compile Include="TranslationTreeNode.cs" />
     <Compile Include="TranslationResult.cs" />
     <Compile Include="WordClasses\InfinitiveMarker.cs" />
     <Compile Include="WordClasses\Conjunction.cs" />
