Started test driving PatternGenerator

--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ConsoleReporter.cs" />
     <Compile Include="IReporter.cs" />
     <Compile Include="PatternExtractor.cs" />
+    <Compile Include="TranslationExtractor.cs" />
     <Compile Include="TestCase.cs" />
     <Compile Include="CandidateFilter.cs" />
     <Compile Include="TestRunner.cs" />
