--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ConsoleReporter.cs" />
     <Compile Include="ITranslationExtractor.cs" />
     <Compile Include="IReporter.cs" />
+    <Compile Include="TestSessionResult.cs" />
     <Compile Include="TranslationExtractor.cs" />
     <Compile Include="PatternExtractor.cs" />
     <Compile Include="TestCase.cs" />
