Some refactoring to prepare for collecting rearrangements from test cases

--- a/Grammar/Grammar.csproj
+++ b/Grammar/Grammar.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arranger.cs" />
+    <Compile Include="IEvaluator.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="Process.cs" />
     <Compile Include="Engine.cs" />
