--- a/Learning.Test/Learning.Test.csproj
+++ b/Learning.Test/Learning.Test.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Compile Include="PatternGeneratorTests.cs" />
     <Compile Include="TestHelper.cs" />
-    <Compile Include="CandidateFilterTests.cs" />
+    <Compile Include="TargetSelectorTests.cs" />
     <Compile Include="PatternExtractorTests.cs" />
     <Compile Include="TestRunnerTests.cs" />
     <Compile Include="TrainableEvaluatorTests.cs" />
