Moved rearrangements closer to trainer, still not sure how to aply to trainableEvaluator

--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -45,8 +45,10 @@
   <ItemGroup>
     <Compile Include="CodeEqualityComparer.cs" />
     <Compile Include="ConsoleReporter.cs" />
+    <Compile Include="EvaluatorEnhancement.cs" />
     <Compile Include="ITranslationExtractor.cs" />
     <Compile Include="IReporter.cs" />
+    <Compile Include="ScoredPattern.cs" />
     <Compile Include="TestSessionResult.cs" />
     <Compile Include="TranslationExtractor.cs" />
     <Compile Include="PatternExtractor.cs" />
