--- a/Grammar/Grammar.csproj
+++ b/Grammar/Grammar.csproj
@@ -47,7 +47,7 @@
     <Compile Include="IEvaluator.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="Process.cs" />
-    <Compile Include="Engine.cs" />
+    <Compile Include="GrammarEngine.cs" />
     <Compile Include="Evaluation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reason.cs" />
