--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrangerGenerator.cs" />
     <Compile Include="CodeEqualityComparer.cs" />
     <Compile Include="ConsoleReporter.cs" />
     <Compile Include="Constructor.cs" />
