Implemented arranger generator for learning rearrangements - removed unused extension methods

--- a/Learning.Test/Learning.Test.csproj
+++ b/Learning.Test/Learning.Test.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrangerGeneratorTests.cs" />
     <Compile Include="PatternGeneratorTests.cs" />
     <Compile Include="TestHelper.cs" />
     <Compile Include="TargetSelectorTests.cs" />
