--- a/Grammar/Grammar.csproj
+++ b/Grammar/Grammar.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arrangement.cs" />
     <Compile Include="Arranger.cs" />
     <Compile Include="IEvaluator.cs" />
     <Compile Include="Repository.cs" />
