--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -46,10 +46,10 @@
     <Compile Include="ArrangerGenerator.cs" />
     <Compile Include="CodeEqualityComparer.cs" />
     <Compile Include="ConsoleReporter.cs" />
-    <Compile Include="Constructor.cs" />
+    <Compile Include="TestCaseTranslators\TestCaseConstructor.cs" />
     <Compile Include="EvaluatorEnhancement.cs" />
-    <Compile Include="FullTextTranslator.cs" />
-    <Compile Include="ITestCaseTranslator.cs" />
+    <Compile Include="TestCaseTranslators\FullTextTranslator.cs" />
+    <Compile Include="TestCaseTranslators\ITestCaseTranslator.cs" />
     <Compile Include="ITranslationExtractor.cs" />
     <Compile Include="IReporter.cs" />
     <Compile Include="ScoredPattern.cs" />
@@ -69,7 +69,7 @@
     <Compile Include="TestCaseResult.cs" />
     <Compile Include="TestSuiteResult.cs" />
     <Compile Include="TranslationTarget.cs" />
-    <Compile Include="WordByWordTranslator.cs" />
+    <Compile Include="TestCaseTranslators\WordByWordTranslator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
