Handle unknown words by throwing informative exception Added a few new words, ordered word lists

--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ArrangerGenerator.cs" />
     <Compile Include="CodeEqualityComparer.cs" />
     <Compile Include="ConsoleReporter.cs" />
+    <Compile Include="MissingTranslations.cs" />
     <Compile Include="TestCaseTranslators\TestCaseConstructor.cs" />
     <Compile Include="EvaluatorEnhancement.cs" />
     <Compile Include="TestCaseTranslators\FullTextTranslator.cs" />
