--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ArrangerGenerator.cs" />
     <Compile Include="ConsoleReporter.cs" />
+    <Compile Include="IPatternExtractor.cs" />
     <Compile Include="MissingTranslations.cs" />
     <Compile Include="TestCaseTranslators\TestCaseConstructor.cs" />
     <Compile Include="EvaluatorEnhancement.cs" />
