All tests green TODO: Optimize running test suites and learning

--- a/Core.Test/Core.Test.csproj
+++ b/Core.Test/Core.Test.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="EncoderTests.cs" />
     <Compile Include="EnumerableExtensionsTests.cs" />
+    <Compile Include="IntExtensionsTests.cs" />
     <Compile Include="TranslatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
