--- a/Grammar/Grammar.csproj
+++ b/Grammar/Grammar.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Arrangement.cs" />
     <Compile Include="Arranger.cs" />
+    <Compile Include="EvaluationProcess.cs" />
     <Compile Include="IEvaluator.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="Process.cs" />
