--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Tokens\Number.cs" />
     <Compile Include="Tokens\Abbreviation.cs" />
     <Compile Include="Tokens\Element.cs" />
+    <Compile Include="CompoundCombiner.cs" />
     <Compile Include="TranslationTreeNode.cs" />
     <Compile Include="TranslationResult.cs" />
     <Compile Include="WordClasses\InfinitiveMarker.cs" />
