optimization TODO: Handle score better when computing priority

--- a/Learning.Test/Learning.Test.csproj
+++ b/Learning.Test/Learning.Test.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="ArrangerGeneratorTests.cs" />
     <Compile Include="PatternGeneratorTests.cs" />
+    <Compile Include="ScoredPatternPriorityComputerTests.cs" />
     <Compile Include="TestHelper.cs" />
     <Compile Include="TargetSelectorTests.cs" />
     <Compile Include="PatternExtractorTests.cs" />
