Prepared for learning reordering in same loop as patterns TODO: learn reordering when all previous cases are ok and failed testcase is ok except ordering - we need an ordering deficit to detect progress if needing several reordernigs for same test case

--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ITranslationExtractor.cs" />
     <Compile Include="IReporter.cs" />
     <Compile Include="ScoredPattern.cs" />
+    <Compile Include="TestCaseTranslators\PossibilitiesTranslator.cs" />
     <Compile Include="TestRunnerSettings.cs" />
     <Compile Include="TestSessionResult.cs" />
     <Compile Include="TranslationExtractor.cs" />
