Separated out tokenization and expansion frmo Translator to TokenGenerator

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ITokenizer.cs" />
     <Compile Include="ITranslation.cs" />
     <Compile Include="LoaderBase.cs" />
+    <Compile Include="TokenGenerator.cs" />
     <Compile Include="Tokens\Start.cs" />
     <Compile Include="Tokens\Ellipsis.cs" />
     <Compile Include="Tokens\Generic.cs" />
