Extracted Capitalizer from translator and added first test TODO: remove current implementation and test drive new implementation

--- a/Core.Test/Core.Test.csproj
+++ b/Core.Test/Core.Test.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CapitalizerTests.cs" />
     <Compile Include="EncoderTests.cs" />
     <Compile Include="EnumerableExtensionsTests.cs" />
     <Compile Include="IntExtensionsTests.cs" />
