--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Capitalizer.cs" />
     <Compile Include="Encoder.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\IntExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="ICapitalizer.cs" />
     <Compile Include="IEvaluation.cs" />
     <Compile Include="IGrammar.cs" />
     <Compile Include="ILogger.cs" />
