Handle invalid casing in testcase Added testcase for adverb with unhandled verb-form

--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ArrangerGenerator.cs" />
     <Compile Include="ConsoleReporter.cs" />
+    <Compile Include="InvalidExample.cs" />
     <Compile Include="IPatternExtractor.cs" />
     <Compile Include="LearningFailed.cs" />
     <Compile Include="MissingTranslations.cs" />
