--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=3.7.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.7.1\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -51,7 +54,6 @@
     <Compile Include="MissingTranslations.cs" />
     <Compile Include="OrderMaker.cs" />
     <Compile Include="ScoredPatternPriorityComputer.cs" />
-    <Compile Include="TestCaseTranslators\TestCaseConstructor.cs" />
     <Compile Include="EvaluatorEnhancement.cs" />
     <Compile Include="TestCaseTranslators\FullTextTranslator.cs" />
     <Compile Include="TestCaseTranslators\ITestCaseTranslator.cs" />
