--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Tokens\Separator.cs" />
     <Compile Include="Tokens\Terminator.cs" />
     <Compile Include="Tokens\Number.cs" />
+    <Compile Include="Tokens\Aggregate.cs" />
     <Compile Include="WordClasses\Abbreviation.cs" />
     <Compile Include="Tokens\Element.cs" />
     <Compile Include="CompoundHandler.cs" />
